Jakarta EE 10 Migration (#248)
* chore: initial commit of ee10 migration

* chore: initial commit of ee10 migration

* chore: initial commit of ee10 migration

* chore: initial commit of ee10 migration

* Google Java Format

---------

Co-authored-by: github-actions <>